--- a/DemoApp/Views/Shared/_Layout.cshtml
+++ b/DemoApp/Views/Shared/_Layout.cshtml
@@ -20,9 +20,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Job List", "Index", "Job")</li>
+                    <li>@Html.ActionLink("Job Form", "JobForm", "Job")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Job")</li>
                 </ul>
             </div>
         </div>
